changed Arrays into List.